--- a/docker-build/Dockerfile
+++ b/docker-build/Dockerfile
@@ -5,7 +5,7 @@ SHELL ["/bin/bash", "-c"]
 # install wget
 RUN apt-get update \
   && apt-get install -y \
-    wget \
+  wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
@@ -28,35 +28,36 @@ RUN echo "" > ~/.bashrc
 # Install necesarry packages
 RUN apt-get update \
   && apt-get install -y \
-    --no-install-recommends \
-    gcc \
-    git \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    pip \
-    python3 \
-    python3-dev \
+  --no-install-recommends \
+  gcc \
+  git \
+  libgl1-mesa-glx \
+  libglib2.0-0 \
+  pip \
+  python3 \
+  python3-dev \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
 # clone repository, create models.yaml and create symlinks
-ARG invokeai_git=invoke-ai/InvokeAI
+ARG invokeai_git=spuliz/raiwebui
+
 ARG invokeai_branch=main
-ARG project_name=invokeai
+ARG project_name=raiwebui
 ARG conda_env_file=environment-lin-cuda.yml
 RUN git clone -b ${invokeai_branch} https://github.com/${invokeai_git}.git "/${project_name}" \
   && cp \
-    "/${project_name}/configs/models.yaml.example" \
-    "/${project_name}/configs/models.yaml" \
+  "/${project_name}/configs/models.yaml.example" \
+  "/${project_name}/configs/models.yaml" \
   && ln -sf \
-    "/${project_name}/environments-and-requirements/${conda_env_file}" \
-    "/${project_name}/environment.yml" \
+  "/${project_name}/environments-and-requirements/${conda_env_file}" \
+  "/${project_name}/environment.yml" \
   && ln -sf \
-    /data/models/v1-5-pruned-emaonly.ckpt \
-    "/${project_name}/models/ldm/stable-diffusion-v1/v1-5-pruned-emaonly.ckpt" \
+  /data/models/v1-5-pruned-emaonly.ckpt \
+  "/${project_name}/models/ldm/stable-diffusion-v1/v1-5-pruned-emaonly.ckpt" \
   && ln -sf \
-    /data/outputs/ \
-    "/${project_name}/outputs"
+  /data/outputs/ \
+  "/${project_name}/outputs"
 
 # set workdir
 WORKDIR "/${project_name}"
@@ -68,14 +69,14 @@ RUN source "${conda_prefix}/etc/profile.d/conda.sh" \
   && conda init bash \
   && source ~/.bashrc \
   && conda env create \
-    --name "${project_name}" \
+  --name "${project_name}" \
   && rm -Rf ~/.cache \
   && conda clean -afy \
   && echo "conda activate ${project_name}" >> ~/.bashrc
 
 RUN source ~/.bashrc \
   && python scripts/preload_models.py \
-    --no-interactive
+  --no-interactive
 
 # Copy entrypoint and set env
 ENV CONDA_PREFIX="${conda_prefix}"
