--- a/docker-build/Dockerfile
+++ b/docker-build/Dockerfile
@@ -58,6 +58,12 @@ RUN git clone -b ${invokeai_branch} https://github.com/${invokeai_git}.git "/${p
   /data/models/pvh_bag_1_model.ckpt \
   "/${project_name}/models/ldm/stable-diffusion-v1/pvh_bag_1_model.ckpt" \
   && ln -sf \
+  /data/models/pvh_bag_2_model.ckpt \
+  "/${project_name}/models/ldm/stable-diffusion-v1/pvh_bag_2_model.ckpt" \
+  && ln -sf \
+  /data/models/pvh_shoes_1_model.ckpt \
+  "/${project_name}/models/ldm/stable-diffusion-v1/pvh_shoes_1_model.ckpt" \
+  && ln -sf \
   /data/outputs/ \
   "/${project_name}/outputs"
 
